non avevo notato che la sezione about fosse piu stretta: cambiato container in fluid-container e wrappato tutto in un div con width minore (noto peraltro ora che sono tutte piu strette, esclusa la sez portfolio: fixo nel prossimo commit

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@ section {
 
 }
 
+.wrapper {
+    width: 75%;
+    margin: auto;
+}
+
+p {
+    text-align: left;
+}
+
 footer {
     background-color: grey;
     text-align: center;
@@ -15,11 +24,6 @@ footer {
     height: 50px;
 }
 
-.wrapper {
-    max-width: 900px;
-    width: 90%;
-    margin: auto;
-}
 
 form {
     text-align: left;
@@ -40,6 +44,7 @@ section.white {
 section.azure {
     background-color: aquamarine;
     color: white;
+
 }
 
 
